# gulp-cli

./: .gitignore  README.md  gulp-cli.spec  pyproject.toml
.github/workflows/: portable-bundles.yml
docs/: command-reference.md  examples.md  extensions.md  getting-started.md  installation.md  portable.md  resource-management.md  stdout-markers.md  troubleshooting-cli.md
portable/: launch-macos.sh  launch-windows.bat
src/gulp_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  extension_helpers.py  extensions.py  output.py  utils.py  version.py
src/gulp_cli/commands/: __init__.py  acl.py  auth.py  collab.py  context.py  db.py  enhance_map.py  enrich.py  glyph.py  ingest.py  mapping.py  operations.py  plugin.py  query.py  source.py  stats.py  storage.py  user_group.py  users.py  utility.py
src/gulp_cli/extension/: __init__.py  query_sigma_zip.py  story.py
tests/: test_collab_count.py  test_elapsed_time.py  test_enrich_live.py  test_ingest_paths_file.py  test_ingest_raw_wait.py  test_ingest_wait_log.py  test_note_attachments.py  test_operations.py  test_query_raw_default.py  test_version.py  test_zip_create.py
