[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gulp-cli"
version = "0.1.0"
description = "Command-line client for gULP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.5",
    "rich>=13.7.1",
    "click==8.1.7",
    "gulp-sdk @ git+https://github.com/mentat-is/gulp-sdk.git@develop",
]

[project.scripts]
gulp-cli = "gulp_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
