[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/gulp_cli/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[project]
name = "gulp-cli"
dynamic = ["version"]
authors = [{ name = "Mentat", email = "info@mentat.is" }]
description = "Command-line client for gULP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.5",
    "rich>=13.7.1",
    "click==8.1.7",
    "gulp-sdk",
]

[project.scripts]
gulp-cli = "gulp_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
