[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/gulp_cli/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project]
name = "gulp-cli"
dynamic = ["version"]
authors = [{ name = "Mentat", email = "info@mentat.is" }]
description = "Command-line client for gULP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer==0.23.1", "rich==15.0.0", "click==8.3.3", "gulp-sdk>=2.0.0"]

[project.optional-dependencies]
portable = ["pyinstaller>=6.11,<7"]

[project.scripts]
gulp-cli = "gulp_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
